<resources>
    <string name="app_name">ROM Control</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="title_ribbon">Ribbons</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="hardware_keys">Hardware Keys</string>
    <string name="installer">Installer</string>
    <string name="title_about">About AOKP</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_installer">Installer Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="title_hardware_keys">Hardware Keys</string>
    <string name="mgerrit_activity_name">mGerrit</string>
    <string name="ribbon_settings_title">Ribbons</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="header_summary_hardware_keys">@null</string>
    <string name="ribbon_settings_summary">@null</string>
    <string name="header_summary_installer">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="enable_bootanimation_unlock">To Unlock: uncheck \"disable boot animation\"</string>
    <string name="enable_phone_or_phablet">To Unlock: enable phone or phablet \"UI mode\"</string>
    <string name="enable_tablet_ui">To Unlock: enable tablet \"UI mode\"</string>
    <string name="enable_noti_wallpaper">To Unlock: enable phone or phablet \"UI mode\" and set a
        \"notification background\"
    </string>
    <string name="enable_crt_mode">To Unlock: check \"CRT screen off\"</string>
    <string name="enable_menu_location">To Unlock: enable a \"menu Location\"</string>
    <string name="enable_hiding_navbar">To Unlock: \"enable hidden NavBar\"</string>
    <string name="enable_hiding_systembar">To Unlock: \"enable hidden SystemBar\"</string>
    <string name="enable_audio_mode">To Unlock: enable \"face down audio mode\"</string>
    <string name="enable_battery_bar">To Unlock: enable a \"battery bar location\"</string>
    <string name="enable_clock_location">To Unlock: enable a \"clock style\"</string>
    <string name="enable_signal_text">To Unlock: set \"signal indicator style\" to display text or dBm</string>
    <string name="enable_wifi_text">To Unlock: set \"WiFi signal indicator style\" to display text</string>
    <string name="enable_toggle_tiles">To Unlock: set \"toggle style\" to tiles</string>
    <string name="misc_short">Misc</string>
    <string name="bootani_cat">Boot animation</string>
    <string name="navbar_cat">NavBar</string>
    <string name="notification_cat">Notification</string>
    <string name="display_cat">Display</string>
    <string name="recents_cat">Recents</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications in the Statusbar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="custom_bootanimation_title">Custom boot animation</string>
    <string name="custom_bootanimation_summary">Select a custom zip from storage to use as your new boot animation
    </string>
    <string name="notification_wallpaper_title">Notification background</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="notif_alpha_title">Notification rows alpha</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In Statusbar while typing</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charger</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if a charger is plugged in or unplugged</string>
    <string name="system_power_crt_screen_off_title">CRT screen off</string>
    <string name="system_power_crt_screen_off_summary">Screen will animate an Electron Beam when turned off</string>
    <string name="system_power_crt_mode_title">CRT animation mode</string>
    <string name="system_power_crt_mode_dialog_title">Show CRT animation</string>
    <string name="rotate_180_title">Allow 180-degree rotation</string>
    <string name="rotate_180_summary">Checking this allows your device to rotate upside down</string>
    <string name="rotate_270_title">Allow 270-degree rotation</string>
    <string name="rotate_270_summary">Checking this allows your device to rotate to the right</string>
    <string name="recent_kill_all">Enable Kill-All button</string>
    <string name="recent_kill_all_summary">Displays a button that kills all apps in the Recent Apps window</string>
    <string name="ram_bar">Recents RAM bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the Recent Apps window</string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some SystemBar items e.g. the Compatibility Mode button</string>
    <string name="multipane_ui">Enable Dual Panel</string>
    <string name="multipane_ui_summary">Checking this will enable the Dual Panel (Tablet) UI used by certain apps
    </string>
    <string name="show_overflow_title">Show Menu UI overflow</string>
    <string name="show_overflow_summary">Display the 3-dot overflow menu button within apps</string>
    <string name="notification_show_wifi_ssid_title">Show WiFi network name</string>
    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">When enabled, this option will allow you to change the brightness by
        sliding your finger across the Statusbar. Note: Will not be active when auto-brightness is on
    </string>
    <string name="user_mode_ui">UI Mode</string>
    <string name="user_mode_ui_summary">Choose the style of the NavBar and Statusbar</string>
    <string name="transparency_dialog_title">Transparency settings</string>
    <string name="battery_icon">Battery icon style</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_cat">Battery bar options</string>
    <string name="battery_bar_style_title">Battery bar style</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Enable charging animation</string>
    <string name="battery_bar_animate_summary">Enabling the charging animation may result in a poor user experience.
        Enable at your own discretion.
    </string>
    <string name="pref_low_battery_warning_policy_title">Low battery warning</string>
    <string name="pref_low_battery_warning_policy_dialog_title">Indicate low battery warning with</string>
    <string name="statusbar_fontsize">Statusbar Font Size</string>
    <string name="statusbar_fontsize_summary">Change the size of text elements on statusbar\nWill restart UI!</string>
    <string name="statusbar_hide_title">Hide Statusbar</string>
    <string name="statusbar_hide_summary">Checking this completely hides the Statusbar</string>
    <string name="statusbar_auto_expand_hidden_title">Auto-Show Statusbar</string>
    <string name="statusbar_auto_expand_hidden_summary">Checking this shows hidden statusbar on active notifications except for fullscreen apps</string>
    <string name="statusbar_swipe_enable_title">Statusbar swipe down</string>
    <string name="statusbar_swipe_enable_summary">Checking this allows swiping down the statusbar for fullscreen apps or if hidden</string>
    <string name="statusbar_swipe_timeout_title">Statusbar timeout</string>
    <string name="statusbar_swipe_timeout_summary">Timeout for showing the statusbar</string>
    <string name="lock_clock_title">cLock settings</string>
    <string name="lock_clock_summary">View or change how the \'cLock\' Home and Lock screen widget
s will display</string>
    <string name="circle_battery_color">Circle color</string>
    <string name="circle_battery_text_color">Circle text color</string>
    <string name="circle_battery_animation_speed">Circle animation speed</string>
    <string name="circle_battery_reset_title">Reset circle colors</string>
    <string name="circle_battery_reset_summary">Reset circle colors to apply installed theme engine colors</string>
    <string name="show_classic_recents">Classic Recents</string>
    <string name="show_classic_recents_summary">Show Gingerbread styled recents menu</string>
</resources>