<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="transparency_dialog"
        android:title="@string/transparency_dialog_title" />


    <PreferenceCategory
        android:key="bootani"
        android:title="@string/bootani_cat">

        <Preference
            android:key="custom_bootanimation"
            android:title="@string/custom_bootanimation_title"
            android:summary="@string/custom_bootanimation_summary" />

        <CheckBoxPreference
            android:key="disable_bootanimation"
            android:title="@string/disable_bootanimation_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification"
        android:title="@string/notification_cat">

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <CheckBoxPreference
            android:key="notification_show_wifi_ssid"
            android:title="@string/notification_show_wifi_ssid_title"
            android:summary="@string/notification_show_wifi_ssid_summary"
            android:defaultValue="false" />

        <Preference
            android:key="notification_wallpaper"
            android:title="@string/notification_wallpaper_title"
            android:summary="@string/notification_wallpaper_summary" />

        <Preference
            android:key="notification_wallpaper_alpha"
            android:title="@string/notif_wallpaper_alpha_title" />

        <Preference
            android:key="notification_alpha"
            android:title="@string/notif_alpha_title" />

        <CheckBoxPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="vibrate_notif_expand"
            android:title="@string/vibrate_notif_expand_title"
            android:summary="@string/vibrate_notif_expand_summary" />

        <CheckBoxPreference
            android:key="statusbar_brightness_slider"
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary" />

        <CheckBoxPreference
            android:key="statusbar_hidden"
            android:title="@string/statusbar_hide_title"
            android:summary="@string/statusbar_hide_summary" />

        <CheckBoxPreference
            android:key="statusbar_auto_expand_hidden"
            android:title="@string/statusbar_auto_expand_hidden_title"
            android:summary="@string/statusbar_auto_expand_hidden_summary" />

        <CheckBoxPreference
            android:key="statusbar_swipe_enable"
            android:title="@string/statusbar_swipe_enable_title"
            android:summary="@string/statusbar_swipe_enable_summary" />

        <ListPreference
            android:key="statusbar_swipe_timeout"
            android:entries="@array/statusbar_swipe_timeout_entries"
            android:entryValues="@array/statusbar_swipe_timeout_values"
            android:title="@string/statusbar_swipe_timeout_title"
            android:summary="@string/statusbar_swipe_timeout_summary"
            android:dependency="statusbar_swipe_enable" /> 

        <CheckBoxPreference
            android:key="ime_switcher"
            android:title="@string/ime_switcher_title"
            android:summary="@string/ime_switcher_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="navbar"
        android:title="@string/navbar_cat">

        <ListPreference
            android:key="user_mode_ui"
            android:title="@string/user_mode_ui"
            android:summary="@string/user_mode_ui_summary"
            android:entries="@array/user_mode_ui_entries"
            android:entryValues="@array/user_mode_ui_values" />

        <CheckBoxPreference
            android:key="hide_extras"
            android:title="@string/hide_extras"
            android:summary="@string/hide_extras_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="force_dualpanel"
            android:title="@string/multipane_ui"
            android:summary="@string/multipane_ui_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_cat">

         <ListPreference
            android:key="status_bar_fontsize"
            android:title="@string/statusbar_fontsize"
            android:summary="@string/statusbar_fontsize_summary"
            android:entries="@array/statusbar_fontsize_entries"
            android:entryValues="@array/statusbar_fontsize_values" />

        <CheckBoxPreference
            android:key="show_overflow"
            android:title="@string/show_overflow_title"
            android:summary="@string/show_overflow_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="rotate_180"
            android:title="@string/rotate_180_title"
            android:summary="@string/rotate_180_summary" />

        <CheckBoxPreference
            android:key="rotate_270"
            android:title="@string/rotate_270_title"
            android:summary="@string/rotate_270_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="wakeup_when_plugged_unplugged"
            android:title="@string/wakeup_when_plugged_unplugged_title"
            android:summary="@string/wakeup_when_plugged_unplugged_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="system_power_crt_screen_off"
            android:summary="@string/system_power_crt_screen_off_summary"
            android:title="@string/system_power_crt_screen_off_title" />

        <ListPreference
            android:key="system_power_crt_mode"
            android:dialogTitle="@string/system_power_crt_mode_dialog_title"
            android:title="@string/system_power_crt_mode_title"
            android:entries="@array/entries_system_power_crt_mode"
            android:entryValues="@array/values_system_power_crt_mode"
            android:dependency="system_power_crt_screen_off" />

        <PreferenceScreen
            android:key="lock_clock"
            android:title="@string/lock_clock_title"
            android:summary="@string/lock_clock_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.lockclock"
                android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
       </PreferenceScreen> 
    </PreferenceCategory>

    <PreferenceCategory
        android:key="recents"
        android:title="@string/recents_cat">

        <CheckBoxPreference
            android:key="recent_kill_all"
            android:title="@string/recent_kill_all"
            android:summary="@string/recent_kill_all_summary" />

        <CheckBoxPreference
            android:key="ram_usage_bar"
            android:title="@string/ram_bar"
            android:summary="@string/ram_bar_summary" />

        <CheckBoxPreference
            android:key="classic_recents"
            android:title="@string/show_classic_recents"
            android:summary="@string/show_classic_recents_summary"
            android:defaultValue="false" /> 

    </PreferenceCategory>
</PreferenceScreen>
