<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
            android:key="battery_icon_list"
            android:title="@string/battery_icon"
            android:entries="@array/battery_icon_entries"
            android:entryValues="@array/battery_icon_values" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="circle_battery_color"
            android:title="@string/circle_battery_color"
            android:defaultValue="#33B5E5" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="circle_battery_text_color"
            android:title="@string/circle_battery_text_color"
            android:defaultValue="#33B5E5" />

        <ListPreference
            android:key="circle_battery_animation_speed"
            android:title="@string/circle_battery_animation_speed"
            android:entries="@array/circle_battery_animation_speed_entries"
            android:entryValues="@array/circle_battery_animation_speed_values" />

        <Preference
            android:key="circle_battery_reset"
            android:title="@string/circle_battery_reset_title"
            android:summary="@string/circle_battery_reset_summary" />

    <PreferenceCategory
        android:key="battery_bar_cat"
        android:title="@string/battery_bar_cat">

        <ListPreference
            android:key="battery_bar_list"
            android:title="@string/battery_bar"
            android:entries="@array/battery_bar_entries"
            android:entryValues="@array/battery_bar_values" />

        <ListPreference
            android:key="battery_bar_style"
            android:title="@string/battery_bar_style_title"
            android:entries="@array/battery_bar_style_entries"
            android:entryValues="@array/battery_bar_style_values" />

        <CheckBoxPreference
            android:key="battery_bar_animate"
            android:title="@string/battery_bar_animate_title"
            android:summary="@string/battery_bar_animate_summary" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="battery_bar_color"
            android:title="@string/battery_bar_color"
            android:defaultValue="#33B5E5" />

        <ListPreference
            android:key="battery_bar_thickness"
            android:title="@string/battery_bar_thickness_title"
            android:entries="@array/battery_bar_thickness_entries"
            android:entryValues="@array/battery_bar_thickness_values" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/misc_short">

    <ListPreference
            android:key="pref_low_battery_warning_policy"
            android:title="@string/pref_low_battery_warning_policy_title"
            android:dialogTitle="@string/pref_low_battery_warning_policy_dialog_title"
            android:entries="@array/pref_low_battery_warning_policy_entries"
            android:entryValues="@array/pref_low_battery_warning_policy_values"
            android:defaultValue="0" />
    </PreferenceCategory>

</PreferenceScreen>
